# Robotworld-kinematica

./: AUTHORS  CMakeLists.txt  README.md  build_and_run.sh  clean.sh  config.txt
include/: AStar.hpp  AbstractActuator.hpp  AbstractAgent.hpp  AbstractFilter.hpp  AbstractSensor.hpp  BoundedVector.hpp  Button.hpp  ButtonToggle.hpp  Client.hpp  CommandlineArgument.hpp  CommunicationService.hpp  CompassSensor.hpp  Config.hpp  FileIO.hpp  FileTraceFunction.hpp  Goal.hpp  GoalShape.hpp  ITraceFunction.hpp  KalmanFilter.hpp  LaserDistanceSensor.hpp  LidarSensor.hpp  LineShape.hpp  LogTextCtrl.hpp  Logger.hpp  MainApplication.hpp  MainFrameWindow.hpp  MathUtils.hpp  Matrix.hpp  Message.hpp  MessageHandler.hpp  MessageTypes.hpp  ModelObject.hpp  NotificationEvent.hpp  NotificationFunctionTypeTraits.hpp  NotificationHandler.hpp  Notifier.hpp  ObjectId.hpp  Observer.hpp  OdometerSensor.hpp  ParticleFilter.hpp  (+30 more)
src/: AStar.cpp  AbstractActuator.cpp  AbstractAgent.cpp  AbstractFilter.cpp  AbstractSensor.cpp  BoundedVector.cpp  CommunicationService.cpp  CompassSensor.cpp  FileIO.cpp  FileTraceFunction.cpp  Goal.cpp  GoalShape.cpp  KalmanFilter.cpp  LaserDistanceSensor.cpp  LidarSensor.cpp  LineShape.cpp  LogTextCtrl.cpp  Logger.cpp  Main.cpp  MainApplication.cpp  MainFrameWindow.cpp  MathUtils.cpp  ModelObject.cpp  Notifier.cpp  ObjectId.cpp  Observer.cpp  OdometerSensor.cpp  ParticleFilter.cpp  Path.cpp  PathShape.cpp  RealWorldSensor.cpp  RectangleShape.cpp  Robot.cpp  RobotShape.cpp  RobotWorld.cpp  RobotWorldCanvas.cpp  Server.cpp  Shape2DUtils.cpp  StdOutTraceFunction.cpp  SteeringActuator.cpp  (+9 more)
